kubernetes_files/external-dns/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: via-ingress.external-dns-test.securethebox.us
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
